--- a/classes/File.html
+++ b/classes/File.html
@@ -55,6 +55,14 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
+                <a href="../files/lib/nuggets/file/replace_rb.html">
+                lib/nuggets/file/replace.rb
+                </a>
+        <br />
+                <a href="../files/lib/nuggets/file/sub_rb.html">
+                lib/nuggets/file/sub.rb
+                </a>
+        <br />
                 <a href="../files/lib/nuggets/file/which_rb.html">
                 lib/nuggets/file/which.rb
                 </a>
