--- a/classes/Nuggets.html
+++ b/classes/Nuggets.html
@@ -83,6 +83,14 @@
                 lib/nuggets/env/user_home_mixin.rb
                 </a>
         <br />
+                <a href="../files/lib/nuggets/file/replace_mixin_rb.html">
+                lib/nuggets/file/replace_mixin.rb
+                </a>
+        <br />
+                <a href="../files/lib/nuggets/file/sub_mixin_rb.html">
+                lib/nuggets/file/sub_mixin.rb
+                </a>
+        <br />
                 <a href="../files/lib/nuggets/file/which_mixin_rb.html">
                 lib/nuggets/file/which_mixin.rb
                 </a>
