--- a/classes/Nuggets/File.html
+++ b/classes/Nuggets/File.html
@@ -55,6 +55,14 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
+                <a href="../../files/lib/nuggets/file/replace_mixin_rb.html">
+                lib/nuggets/file/replace_mixin.rb
+                </a>
+        <br />
+                <a href="../../files/lib/nuggets/file/sub_mixin_rb.html">
+                lib/nuggets/file/sub_mixin.rb
+                </a>
+        <br />
                 <a href="../../files/lib/nuggets/file/which_mixin_rb.html">
                 lib/nuggets/file/which_mixin.rb
                 </a>
@@ -95,7 +103,9 @@
     <div id="class-list">
       <h3 class="section-bar">Classes and Modules</h3>
 
-      Module <a href="File/WhichMixin.html" class="link">Nuggets::File::WhichMixin</a><br />
+      Module <a href="File/ReplaceMixin.html" class="link">Nuggets::File::ReplaceMixin</a><br />
+Module <a href="File/SubMixin.html" class="link">Nuggets::File::SubMixin</a><br />
+Module <a href="File/WhichMixin.html" class="link">Nuggets::File::WhichMixin</a><br />
 
     </div>
 
