--- a/files/lib/nuggets/file/replace_mixin_rb.html
+++ b/files/lib/nuggets/file/replace_mixin_rb.html
@@ -5,7 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>File: word_wrap.rb</title>
+  <title>File: replace_mixin.rb</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
   <link rel="stylesheet" href="../../../.././rdoc-style.css" type="text/css" media="screen" />
@@ -47,16 +47,16 @@
 
 
   <div id="fileHeader">
-    <h1>word_wrap.rb</h1>
+    <h1>replace_mixin.rb</h1>
     <table class="header-table">
     <tr class="top-aligned-row">
       <td><strong>Path:</strong></td>
-      <td>lib/nuggets/string/word_wrap.rb
+      <td>lib/nuggets/file/replace_mixin.rb
       </td>
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Thu Feb 03 12:48:59 +0100 2011</td>
+      <td>Thu Feb 03 12:40:03 +0100 2011</td>
     </tr>
     </table>
   </div>
@@ -69,13 +69,6 @@
   <div id="contextContent">
 
 
-    <div id="requires-list">
-      <h3 class="section-bar">Required files</h3>
-
-      <div class="name-list">
-      enumerator&nbsp;&nbsp;
-      </div>
-    </div>
 
    </div>
 
