--- a/files/lib/nuggets/file/sub_mixin_rb.html
+++ b/files/lib/nuggets/file/sub_mixin_rb.html
@@ -5,7 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>File: word_wrap.rb</title>
+  <title>File: sub_mixin.rb</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
   <link rel="stylesheet" href="../../../.././rdoc-style.css" type="text/css" media="screen" />
@@ -47,16 +47,16 @@
 
 
   <div id="fileHeader">
-    <h1>word_wrap.rb</h1>
+    <h1>sub_mixin.rb</h1>
     <table class="header-table">
     <tr class="top-aligned-row">
       <td><strong>Path:</strong></td>
-      <td>lib/nuggets/string/word_wrap.rb
+      <td>lib/nuggets/file/sub_mixin.rb
       </td>
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Thu Feb 03 12:48:59 +0100 2011</td>
+      <td>Mon Jan 31 12:36:02 +0100 2011</td>
     </tr>
     </table>
   </div>
@@ -73,7 +73,7 @@
       <h3 class="section-bar">Required files</h3>
 
       <div class="name-list">
-      enumerator&nbsp;&nbsp;
+      nuggets/file/replace_mixin&nbsp;&nbsp;
       </div>
     </div>
 
