--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -38,6 +38,8 @@
     <a href="classes/Nuggets/Env/UserEncodingMixin.html">Nuggets::Env::UserEncodingMixin</a><br />
     <a href="classes/Nuggets/Env/UserHomeMixin.html">Nuggets::Env::UserHomeMixin</a><br />
     <a href="classes/Nuggets/File.html">Nuggets::File</a><br />
+    <a href="classes/Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html">Nuggets::File::SubMixin</a><br />
     <a href="classes/Nuggets/File/WhichMixin.html">Nuggets::File::WhichMixin</a><br />
     <a href="classes/Nuggets/Hash.html">Nuggets::Hash</a><br />
     <a href="classes/Nuggets/Hash/BlankMixin.html">Nuggets::Hash::BlankMixin</a><br />
