--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -52,6 +52,10 @@
     <a href="files/lib/nuggets/env/user_encoding_mixin_rb.html">lib/nuggets/env/user_encoding_mixin.rb</a><br />
     <a href="files/lib/nuggets/env/user_home_rb.html">lib/nuggets/env/user_home.rb</a><br />
     <a href="files/lib/nuggets/env/user_home_mixin_rb.html">lib/nuggets/env/user_home_mixin.rb</a><br />
+    <a href="files/lib/nuggets/file/replace_rb.html">lib/nuggets/file/replace.rb</a><br />
+    <a href="files/lib/nuggets/file/replace_mixin_rb.html">lib/nuggets/file/replace_mixin.rb</a><br />
+    <a href="files/lib/nuggets/file/sub_rb.html">lib/nuggets/file/sub.rb</a><br />
+    <a href="files/lib/nuggets/file/sub_mixin_rb.html">lib/nuggets/file/sub_mixin.rb</a><br />
     <a href="files/lib/nuggets/file/which_rb.html">lib/nuggets/file/which.rb</a><br />
     <a href="files/lib/nuggets/file/which_mixin_rb.html">lib/nuggets/file/which_mixin.rb</a><br />
     <a href="files/lib/nuggets/hash/at_rb.html">lib/nuggets/hash/at.rb</a><br />
