--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
 <!--
 
-    ruby-nuggets Application documentation
+    ruby-nuggets Application documentation (v0.6.8)
 
   -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>ruby-nuggets Application documentation</title>
+  <title>ruby-nuggets Application documentation (v0.6.8)</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <frameset rows="20%, 80%">
