--- a/fr_method_index.html
+++ b/fr_method_index.html
@@ -65,6 +65,7 @@
     <a href="classes/Nuggets/String/EvaluateMixin.html#M000199">evaluate (Nuggets::String::EvaluateMixin)</a><br />
     <a href="classes/Nuggets/URI/ExistMixin.html#M000129">exist? (Nuggets::URI::ExistMixin)</a><br />
     <a href="classes/Nuggets/URI/ExistMixin.html#M000130">exists? (Nuggets::URI::ExistMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000203">extended (Nuggets::File::SubMixin)</a><br />
     <a href="classes/Integer.html#M000005">f! (Integer)</a><br />
     <a href="classes/Integer.html#M000004">fac (Integer)</a><br />
     <a href="classes/Integer.html#M000002">factorial (Integer)</a><br />
@@ -80,11 +81,13 @@
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000154">ghost_class? (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000147">ghost_object (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/String.html#M000090">gimme_match_data! (String)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000206">gsub (Nuggets::File::SubMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000207">gsub! (Nuggets::File::SubMixin)</a><br />
     <a href="classes/String.html#M000088">gsub_with_md (String)</a><br />
     <a href="classes/String.html#M000089">gsub_with_md! (String)</a><br />
     <a href="classes/Numeric.html#M000044">hms (Numeric)</a><br />
-    <a href="classes/Array.html#M000012">in_order (Array)</a><br />
     <a href="classes/Hash.html#M000039">in_order (Hash)</a><br />
+    <a href="classes/Array.html#M000012">in_order (Array)</a><br />
     <a href="classes/Array.html#M000013">in_order! (Array)</a><br />
     <a href="classes/Nuggets/Array/StandardDeviationMixin.html#M000171">included (Nuggets::Array::StandardDeviationMixin)</a><br />
     <a href="classes/Array.html#M000017">increasing? (Array)</a><br />
@@ -123,22 +126,23 @@
     <a href="classes/String.html#M000084">nsub (String)</a><br />
     <a href="classes/String.html#M000085">nsub! (String)</a><br />
     <a href="classes/Util/ContentType.html#M000117">of (Util::ContentType)</a><br />
-    <a href="classes/Array.html#M000024">only (Array)</a><br />
     <a href="classes/Hash.html#M000042">only (Hash)</a><br />
+    <a href="classes/Array.html#M000024">only (Array)</a><br />
     <a href="classes/Hash.html#M000043">only_pair (Hash)</a><br />
     <a href="classes/Tempfile.html#M000072">open (Tempfile)</a><br />
     <a href="classes/IO.html#M000071">open_with_mode (IO)</a><br />
     <a href="classes/Numeric.html#M000054">positive? (Numeric)</a><br />
     <a href="classes/Nuggets/Range/QuantileMixin.html#M000185">quantile (Nuggets::Range::QuantileMixin)</a><br />
-    <a href="classes/Array.html#M000025">rand (Array)</a><br />
     <a href="classes/Hash.html#M000038">rand (Hash)</a><br />
+    <a href="classes/Array.html#M000025">rand (Array)</a><br />
     <a href="classes/IO.html#M000065">read (IO)</a><br />
     <a href="classes/IO.html#M000068">read_write (IO)</a><br />
+    <a href="classes/Nuggets/File/ReplaceMixin.html#M000202">replace (Nuggets::File::ReplaceMixin)</a><br />
     <a href="classes/String.html#M000098">replace_diacritics (String)</a><br />
     <a href="classes/String.html#M000099">replace_diacritics! (String)</a><br />
     <a href="classes/Numeric.html#M000061">round_to (Numeric)</a><br />
-    <a href="classes/File.html#M000100">ruby (File)</a><br />
     <a href="classes/Process.html#M000118">ruby (Process)</a><br />
+    <a href="classes/File.html#M000100">ruby (File)</a><br />
     <a href="classes/Util/Ruby.html#M000101">ruby_command (Util::Ruby)</a><br />
     <a href="classes/Util/Ruby.html#M000102">ruby_executable (Util::Ruby)</a><br />
     <a href="classes/Util/Ruby.html#M000110">ruby_options_to_argv (Util::Ruby)</a><br />
@@ -173,6 +177,8 @@
     <a href="classes/Array.html#M000022">strictly_descending? (Array)</a><br />
     <a href="classes/Array.html#M000019">strictly_increasing? (Array)</a><br />
     <a href="classes/Util/ANSIColor2CSS.html#M000116">style (Util::ANSIColor2CSS)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000204">sub (Nuggets::File::SubMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000205">sub! (Nuggets::File::SubMixin)</a><br />
     <a href="classes/String.html#M000086">sub_with_md (String)</a><br />
     <a href="classes/String.html#M000087">sub_with_md! (String)</a><br />
     <a href="classes/Nuggets/Version.html#M000132">to_a (Nuggets::Version)</a><br />
