--- a/classes/Hash.html
+++ b/classes/Hash.html
@@ -59,6 +59,10 @@
                 lib/nuggets/hash/at.rb
                 </a>
         <br />
+                <a href="../files/lib/nuggets/hash/deep_merge_rb.html">
+                lib/nuggets/hash/deep_merge.rb
+                </a>
+        <br />
                 <a href="../files/lib/nuggets/hash/in_order_rb.html">
                 lib/nuggets/hash/in_order.rb
                 </a>
@@ -132,6 +136,7 @@
       <h3 class="section-bar">Included Modules</h3>
 
       <div id="includes-list">
+        <span class="include-name"><a href="Nuggets/Hash/DeepMergeMixin.html">Nuggets::Hash::DeepMergeMixin</a></span>
         <span class="include-name"><a href="Nuggets/Hash/UnrollMixin.html">Nuggets::Hash::UnrollMixin</a></span>
         <span class="include-name"><a href="Nuggets/Hash/BlankMixin.html">Nuggets::Hash::BlankMixin</a></span>
       </div>
