--- a/classes/Nuggets.html
+++ b/classes/Nuggets.html
@@ -95,6 +95,10 @@
                 lib/nuggets/file/which_mixin.rb
                 </a>
         <br />
+                <a href="../files/lib/nuggets/hash/deep_merge_mixin_rb.html">
+                lib/nuggets/hash/deep_merge_mixin.rb
+                </a>
+        <br />
                 <a href="../files/lib/nuggets/hash/nest_mixin_rb.html">
                 lib/nuggets/hash/nest_mixin.rb
                 </a>
