--- a/classes/Nuggets/Hash.html
+++ b/classes/Nuggets/Hash.html
@@ -55,6 +55,10 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
+                <a href="../../files/lib/nuggets/hash/deep_merge_mixin_rb.html">
+                lib/nuggets/hash/deep_merge_mixin.rb
+                </a>
+        <br />
                 <a href="../../files/lib/nuggets/hash/nest_mixin_rb.html">
                 lib/nuggets/hash/nest_mixin.rb
                 </a>
@@ -104,6 +108,7 @@
       <h3 class="section-bar">Classes and Modules</h3>
 
       Module <a href="Hash/BlankMixin.html" class="link">Nuggets::Hash::BlankMixin</a><br />
+Module <a href="Hash/DeepMergeMixin.html" class="link">Nuggets::Hash::DeepMergeMixin</a><br />
 Module <a href="Hash/NestMixin.html" class="link">Nuggets::Hash::NestMixin</a><br />
 Module <a href="Hash/UnrollMixin.html" class="link">Nuggets::Hash::UnrollMixin</a><br />
 
