--- a/files/lib/nuggets/hash/deep_merge_rb.html
+++ b/files/lib/nuggets/hash/deep_merge_rb.html
@@ -5,7 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>File: evaluate_mixin.rb</title>
+  <title>File: deep_merge.rb</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
   <link rel="stylesheet" href="../../../.././rdoc-style.css" type="text/css" media="screen" />
@@ -47,16 +47,16 @@
 
 
   <div id="fileHeader">
-    <h1>evaluate_mixin.rb</h1>
+    <h1>deep_merge.rb</h1>
     <table class="header-table">
     <tr class="top-aligned-row">
       <td><strong>Path:</strong></td>
-      <td>lib/nuggets/string/evaluate_mixin.rb
+      <td>lib/nuggets/hash/deep_merge.rb
       </td>
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Thu Feb 10 10:18:47 +0100 2011</td>
+      <td>Wed Feb 09 18:17:37 +0100 2011</td>
     </tr>
     </table>
   </div>
@@ -69,6 +69,13 @@
   <div id="contextContent">
 
 
+    <div id="requires-list">
+      <h3 class="section-bar">Required files</h3>
+
+      <div class="name-list">
+      nuggets/hash/deep_merge_mixin&nbsp;&nbsp;
+      </div>
+    </div>
 
    </div>
 
