--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -43,6 +43,7 @@
     <a href="classes/Nuggets/File/WhichMixin.html">Nuggets::File::WhichMixin</a><br />
     <a href="classes/Nuggets/Hash.html">Nuggets::Hash</a><br />
     <a href="classes/Nuggets/Hash/BlankMixin.html">Nuggets::Hash::BlankMixin</a><br />
+    <a href="classes/Nuggets/Hash/DeepMergeMixin.html">Nuggets::Hash::DeepMergeMixin</a><br />
     <a href="classes/Nuggets/Hash/NestMixin.html">Nuggets::Hash::NestMixin</a><br />
     <a href="classes/Nuggets/Hash/UnrollMixin.html">Nuggets::Hash::UnrollMixin</a><br />
     <a href="classes/Nuggets/IO.html">Nuggets::IO</a><br />
