--- a/fr_method_index.html
+++ b/fr_method_index.html
@@ -22,7 +22,7 @@
   <div id="index-entries">
     <a href="classes/Array.html#M000011">% (Array)</a><br />
     <a href="files/lib/nuggets_rb.html#M000001">Nuggets (lib/nuggets.rb)</a><br />
-    <a href="classes/Nuggets/String/XorMixin.html#M000187">^ (Nuggets::String::XorMixin)</a><br />
+    <a href="classes/Nuggets/String/XorMixin.html#M000190">^ (Nuggets::String::XorMixin)</a><br />
     <a href="classes/Enumerable.html#M000122">_block_for_all_any_extended (Enumerable)</a><br />
     <a href="classes/IO.html#M000064">agrep (IO)</a><br />
     <a href="classes/Enumerable.html#M000119">agrep (Enumerable)</a><br />
@@ -36,36 +36,39 @@
     <a href="classes/Hash.html#M000035">at (Hash)</a><br />
     <a href="classes/Numeric.html#M000051">at_least (Numeric)</a><br />
     <a href="classes/Numeric.html#M000053">at_most (Numeric)</a><br />
-    <a href="classes/Numeric.html#M000049">between (Numeric)</a><br />
     <a href="classes/Nuggets/Array/LimitMixin.html#M000180">between (Nuggets::Array::LimitMixin)</a><br />
+    <a href="classes/Numeric.html#M000049">between (Numeric)</a><br />
     <a href="classes/Nuggets/Proc/BindMixin.html#M000181">bind (Nuggets::Proc::BindMixin)</a><br />
     <a href="classes/Nuggets/Object/BlankMixin.html#M000160">blank? (Nuggets::Object::BlankMixin)</a><br />
     <a href="classes/Nuggets/Object/BooleanMixin.html#M000163">boolean? (Nuggets::Object::BooleanMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000193">byte_count (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000196">byte_count (Nuggets::String::WcMixin)</a><br />
     <a href="classes/String.html#M000073">capitalize_first (String)</a><br />
     <a href="classes/String.html#M000074">capitalize_first! (String)</a><br />
     <a href="classes/String.html#M000081">capitalized? (String)</a><br />
     <a href="classes/String.html#M000075">case (String)</a><br />
     <a href="classes/Numeric.html#M000063">ceil_to (Numeric)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000195">char_count (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000198">char_count (Nuggets::String::WcMixin)</a><br />
     <a href="classes/Util/ANSIColor2CSS.html#M000115">clear (Util::ANSIColor2CSS)</a><br />
     <a href="classes/Array.html#M000008">comb (Array)</a><br />
     <a href="classes/Util/Ruby.html#M000109">command_for_ruby_tool (Util::Ruby)</a><br />
     <a href="classes/Nuggets/URI/ContentTypeMixin.html#M000131">content_type (Nuggets::URI::ContentTypeMixin)</a><br />
     <a href="classes/Util/ANSIColor2CSS.html#M000113">convert (Util::ANSIColor2CSS)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000197">count_by_re (Nuggets::String::WcMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000198">count_by_re2 (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000200">count_by_re (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000201">count_by_re2 (Nuggets::String::WcMixin)</a><br />
     <a href="classes/Array.html#M000021">decreasing? (Array)</a><br />
+    <a href="classes/Nuggets/Hash/DeepMergeMixin.html#M000185">deep_merge (Nuggets::Hash::DeepMergeMixin)</a><br />
+    <a href="classes/Nuggets/Hash/DeepMergeMixin.html#M000186">deep_merge! (Nuggets::Hash::DeepMergeMixin)</a><br />
+    <a href="classes/Nuggets/Hash/DeepMergeMixin.html#M000187">deep_update (Nuggets::Hash::DeepMergeMixin)</a><br />
     <a href="classes/Array.html#M000020">descending? (Array)</a><br />
     <a href="classes/Nuggets/Integer/LengthMixin.html#M000170">digit_count (Nuggets::Integer::LengthMixin)</a><br />
     <a href="classes/String.html#M000077">downcase? (String)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000142">eigenclass (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000155">eigenclass? (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000148">eigenobject (Nuggets::Object::SingletonClassMixin)</a><br />
-    <a href="classes/Nuggets/String/EvaluateMixin.html#M000199">evaluate (Nuggets::String::EvaluateMixin)</a><br />
+    <a href="classes/Nuggets/String/EvaluateMixin.html#M000202">evaluate (Nuggets::String::EvaluateMixin)</a><br />
     <a href="classes/Nuggets/URI/ExistMixin.html#M000129">exist? (Nuggets::URI::ExistMixin)</a><br />
     <a href="classes/Nuggets/URI/ExistMixin.html#M000130">exists? (Nuggets::URI::ExistMixin)</a><br />
-    <a href="classes/Nuggets/File/SubMixin.html#M000203">extended (Nuggets::File::SubMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000206">extended (Nuggets::File::SubMixin)</a><br />
     <a href="classes/Integer.html#M000005">f! (Integer)</a><br />
     <a href="classes/Integer.html#M000004">fac (Integer)</a><br />
     <a href="classes/Integer.html#M000002">factorial (Integer)</a><br />
@@ -81,13 +84,13 @@
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000154">ghost_class? (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000147">ghost_object (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/String.html#M000090">gimme_match_data! (String)</a><br />
-    <a href="classes/Nuggets/File/SubMixin.html#M000206">gsub (Nuggets::File::SubMixin)</a><br />
-    <a href="classes/Nuggets/File/SubMixin.html#M000207">gsub! (Nuggets::File::SubMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000209">gsub (Nuggets::File::SubMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000210">gsub! (Nuggets::File::SubMixin)</a><br />
     <a href="classes/String.html#M000088">gsub_with_md (String)</a><br />
     <a href="classes/String.html#M000089">gsub_with_md! (String)</a><br />
     <a href="classes/Numeric.html#M000044">hms (Numeric)</a><br />
-    <a href="classes/Hash.html#M000039">in_order (Hash)</a><br />
     <a href="classes/Array.html#M000012">in_order (Array)</a><br />
+    <a href="classes/Hash.html#M000039">in_order (Hash)</a><br />
     <a href="classes/Array.html#M000013">in_order! (Array)</a><br />
     <a href="classes/Nuggets/Array/StandardDeviationMixin.html#M000171">included (Nuggets::Array::StandardDeviationMixin)</a><br />
     <a href="classes/Array.html#M000017">increasing? (Array)</a><br />
@@ -97,13 +100,13 @@
     <a href="classes/Nuggets/Integer/LengthMixin.html#M000169">length (Nuggets::Integer::LengthMixin)</a><br />
     <a href="classes/Nuggets/Array/LimitMixin.html#M000179">limit (Nuggets::Array::LimitMixin)</a><br />
     <a href="classes/Numeric.html#M000048">limit (Numeric)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000189">line_count (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000192">line_count (Nuggets::String::WcMixin)</a><br />
     <a href="classes/Util/Ruby.html#M000108">locate_ruby_tool (Util::Ruby)</a><br />
     <a href="classes/Util/Ruby.html#M000111">locate_ruby_tool_by_basename (Util::Ruby)</a><br />
     <a href="classes/String.html#M000076">lower_case? (String)</a><br />
     <a href="classes/Nuggets/Integer/MapMixin.html#M000168">map_positive (Nuggets::Integer::MapMixin)</a><br />
-    <a href="classes/Enumerable.html#M000127">max (Enumerable)</a><br />
     <a href="classes/Numeric.html#M000052">max (Numeric)</a><br />
+    <a href="classes/Enumerable.html#M000127">max (Enumerable)</a><br />
     <a href="classes/Enumerable.html#M000124">max_by (Enumerable)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000143">metaclass (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000156">metaclass? (Nuggets::Object::SingletonClassMixin)</a><br />
@@ -126,23 +129,23 @@
     <a href="classes/String.html#M000084">nsub (String)</a><br />
     <a href="classes/String.html#M000085">nsub! (String)</a><br />
     <a href="classes/Util/ContentType.html#M000117">of (Util::ContentType)</a><br />
-    <a href="classes/Hash.html#M000042">only (Hash)</a><br />
     <a href="classes/Array.html#M000024">only (Array)</a><br />
+    <a href="classes/Hash.html#M000042">only (Hash)</a><br />
     <a href="classes/Hash.html#M000043">only_pair (Hash)</a><br />
     <a href="classes/Tempfile.html#M000072">open (Tempfile)</a><br />
     <a href="classes/IO.html#M000071">open_with_mode (IO)</a><br />
     <a href="classes/Numeric.html#M000054">positive? (Numeric)</a><br />
-    <a href="classes/Nuggets/Range/QuantileMixin.html#M000185">quantile (Nuggets::Range::QuantileMixin)</a><br />
-    <a href="classes/Hash.html#M000038">rand (Hash)</a><br />
+    <a href="classes/Nuggets/Range/QuantileMixin.html#M000188">quantile (Nuggets::Range::QuantileMixin)</a><br />
     <a href="classes/Array.html#M000025">rand (Array)</a><br />
+    <a href="classes/Hash.html#M000038">rand (Hash)</a><br />
     <a href="classes/IO.html#M000065">read (IO)</a><br />
     <a href="classes/IO.html#M000068">read_write (IO)</a><br />
-    <a href="classes/Nuggets/File/ReplaceMixin.html#M000202">replace (Nuggets::File::ReplaceMixin)</a><br />
+    <a href="classes/Nuggets/File/ReplaceMixin.html#M000205">replace (Nuggets::File::ReplaceMixin)</a><br />
     <a href="classes/String.html#M000098">replace_diacritics (String)</a><br />
     <a href="classes/String.html#M000099">replace_diacritics! (String)</a><br />
     <a href="classes/Numeric.html#M000061">round_to (Numeric)</a><br />
-    <a href="classes/Process.html#M000118">ruby (Process)</a><br />
     <a href="classes/File.html#M000100">ruby (File)</a><br />
+    <a href="classes/Process.html#M000118">ruby (Process)</a><br />
     <a href="classes/Util/Ruby.html#M000101">ruby_command (Util::Ruby)</a><br />
     <a href="classes/Util/Ruby.html#M000102">ruby_executable (Util::Ruby)</a><br />
     <a href="classes/Util/Ruby.html#M000110">ruby_options_to_argv (Util::Ruby)</a><br />
@@ -177,8 +180,8 @@
     <a href="classes/Array.html#M000022">strictly_descending? (Array)</a><br />
     <a href="classes/Array.html#M000019">strictly_increasing? (Array)</a><br />
     <a href="classes/Util/ANSIColor2CSS.html#M000116">style (Util::ANSIColor2CSS)</a><br />
-    <a href="classes/Nuggets/File/SubMixin.html#M000204">sub (Nuggets::File::SubMixin)</a><br />
-    <a href="classes/Nuggets/File/SubMixin.html#M000205">sub! (Nuggets::File::SubMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000207">sub (Nuggets::File::SubMixin)</a><br />
+    <a href="classes/Nuggets/File/SubMixin.html#M000208">sub! (Nuggets::File::SubMixin)</a><br />
     <a href="classes/String.html#M000086">sub_with_md (String)</a><br />
     <a href="classes/String.html#M000087">sub_with_md! (String)</a><br />
     <a href="classes/Nuggets/Version.html#M000132">to_a (Nuggets::Version)</a><br />
@@ -209,23 +212,23 @@
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000153">virtual_class? (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/Nuggets/Object/SingletonClassMixin.html#M000146">virtual_object (Nuggets::Object::SingletonClassMixin)</a><br />
     <a href="classes/Nuggets/Object/BlankMixin.html#M000161">void? (Nuggets::Object::BlankMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000188">wc (Nuggets::String::WcMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000194">wc_c (Nuggets::String::WcMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000190">wc_l (Nuggets::String::WcMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000196">wc_m (Nuggets::String::WcMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000192">wc_w (Nuggets::String::WcMixin)</a><br />
-    <a href="classes/Nuggets/File/WhichMixin.html#M000200">which (Nuggets::File::WhichMixin)</a><br />
-    <a href="classes/Nuggets/File/WhichMixin.html#M000201">which_command (Nuggets::File::WhichMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000191">wc (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000197">wc_c (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000193">wc_l (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000199">wc_m (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000195">wc_w (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/File/WhichMixin.html#M000203">which (Nuggets::File::WhichMixin)</a><br />
+    <a href="classes/Nuggets/File/WhichMixin.html#M000204">which_command (Nuggets::File::WhichMixin)</a><br />
     <a href="classes/Nuggets/Env/SetMixin.html#M000138">with (Nuggets::Env::SetMixin)</a><br />
     <a href="classes/Nuggets/Env/SetMixin.html#M000137">without (Nuggets::Env::SetMixin)</a><br />
-    <a href="classes/Nuggets/String/WcMixin.html#M000191">word_count (Nuggets::String::WcMixin)</a><br />
+    <a href="classes/Nuggets/String/WcMixin.html#M000194">word_count (Nuggets::String::WcMixin)</a><br />
     <a href="classes/String.html#M000091">word_wrap (String)</a><br />
     <a href="classes/String.html#M000092">word_wrap! (String)</a><br />
     <a href="classes/String.html#M000093">word_wrap_paragraph (String)</a><br />
     <a href="classes/String.html#M000094">word_wrap_paragraph! (String)</a><br />
     <a href="classes/IO.html#M000066">write (IO)</a><br />
     <a href="classes/IO.html#M000069">write_read (IO)</a><br />
-    <a href="classes/Nuggets/String/XorMixin.html#M000186">xor (Nuggets::String::XorMixin)</a><br />
+    <a href="classes/Nuggets/String/XorMixin.html#M000189">xor (Nuggets::String::XorMixin)</a><br />
     <a href="classes/Numeric.html#M000045">ymd (Numeric)</a><br />
   </div>
 </div>
