--- a/classes/Nuggets/File/SubMixin.html
+++ b/classes/Nuggets/File/SubMixin.html
@@ -80,11 +80,11 @@
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000203">extended</a>&nbsp;&nbsp;
-      <a href="#M000206">gsub</a>&nbsp;&nbsp;
-      <a href="#M000207">gsub!</a>&nbsp;&nbsp;
-      <a href="#M000204">sub</a>&nbsp;&nbsp;
-      <a href="#M000205">sub!</a>&nbsp;&nbsp;
+      <a href="#M000206">extended</a>&nbsp;&nbsp;
+      <a href="#M000209">gsub</a>&nbsp;&nbsp;
+      <a href="#M000210">gsub!</a>&nbsp;&nbsp;
+      <a href="#M000207">sub</a>&nbsp;&nbsp;
+      <a href="#M000208">sub!</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -106,19 +106,19 @@
     <div id="methods">
       <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000203" class="method-detail">
-        <a name="M000203"></a>
+      <div id="method-M000206" class="method-detail">
+        <a name="M000206"></a>
 
         <div class="method-heading">
-          <a href="#M000203" class="method-signature">
+          <a href="#M000206" class="method-signature">
           <span class="method-name">extended</span><span class="method-args">(base)</span>
           </a>
         </div>
       
         <div class="method-description">
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000203-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000203-source">
+            onclick="toggleCode('M000206-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000206-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/nuggets/file/sub_mixin.rb, line 34</span>
 34:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">extended</span>(<span class="ruby-identifier">base</span>)
@@ -131,11 +131,11 @@
 
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000206" class="method-detail">
-        <a name="M000206"></a>
+      <div id="method-M000209" class="method-detail">
+        <a name="M000209"></a>
 
         <div class="method-heading">
-          <a href="#M000206" class="method-signature">
+          <a href="#M000209" class="method-signature">
           <span class="method-name">File.gsub(name, *args, &block) => aString<br />
 </span>
           </a>
@@ -147,13 +147,13 @@ Calls String#gsub! on file <tt>name</tt>&#8216;s contents with
 <tt>args</tt> and (optional) <tt>block</tt> and returns the new content.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000206-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000206-source">
+            onclick="toggleCode('M000209-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000209-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/nuggets/file/sub_mixin.rb, line 71</span>
 71:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">gsub</span>(<span class="ruby-identifier">name</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">args</span>)
 72:     <span class="ruby-identifier">content</span> = <span class="ruby-identifier">read</span>(<span class="ruby-identifier">name</span>)
-73:     <span class="ruby-identifier">content</span>.<span class="ruby-identifier">gsub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
+73:     <span class="ruby-identifier">content</span>.<span class="ruby-identifier">gsub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-operator">::</span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
 74:     <span class="ruby-identifier">content</span>
 75:   <span class="ruby-keyword kw">end</span>
 </pre>
@@ -161,11 +161,11 @@ Calls String#gsub! on file <tt>name</tt>&#8216;s contents with
         </div>
       </div>
 
-      <div id="method-M000207" class="method-detail">
-        <a name="M000207"></a>
+      <div id="method-M000210" class="method-detail">
+        <a name="M000210"></a>
 
         <div class="method-heading">
-          <a href="#M000207" class="method-signature">
+          <a href="#M000210" class="method-signature">
           <span class="method-name">File.gsub!(name, *args, &block) => aString or nil<br />
 </span>
           </a>
@@ -178,15 +178,15 @@ Calls String#gsub! on file <tt>name</tt>&#8216;s contents with
 new content. Returns the result of the String#gsub! call.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000207-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000207-source">
+            onclick="toggleCode('M000210-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000210-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/nuggets/file/sub_mixin.rb, line 83</span>
 83:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">gsub!</span>(<span class="ruby-identifier">name</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">args</span>)
 84:     <span class="ruby-identifier">res</span> = <span class="ruby-keyword kw">nil</span>
 85: 
 86:     <span class="ruby-identifier">replace</span>(<span class="ruby-identifier">name</span>) { <span class="ruby-operator">|</span><span class="ruby-identifier">content</span><span class="ruby-operator">|</span>
-87:       <span class="ruby-identifier">res</span> = <span class="ruby-identifier">content</span>.<span class="ruby-identifier">gsub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
+87:       <span class="ruby-identifier">res</span> = <span class="ruby-identifier">content</span>.<span class="ruby-identifier">gsub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-operator">::</span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
 88:       <span class="ruby-identifier">content</span>
 89:     }
 90: 
@@ -197,11 +197,11 @@ new content. Returns the result of the String#gsub! call.
         </div>
       </div>
 
-      <div id="method-M000204" class="method-detail">
-        <a name="M000204"></a>
+      <div id="method-M000207" class="method-detail">
+        <a name="M000207"></a>
 
         <div class="method-heading">
-          <a href="#M000204" class="method-signature">
+          <a href="#M000207" class="method-signature">
           <span class="method-name">File.sub(name, *args, &block) => aString<br />
 </span>
           </a>
@@ -213,13 +213,13 @@ Calls String#sub! on file <tt>name</tt>&#8216;s contents with <tt>args</tt>
 and (optional) <tt>block</tt> and returns the new content.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000204-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000204-source">
+            onclick="toggleCode('M000207-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000207-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/nuggets/file/sub_mixin.rb, line 43</span>
 43:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sub</span>(<span class="ruby-identifier">name</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">args</span>)
 44:     <span class="ruby-identifier">content</span> = <span class="ruby-identifier">read</span>(<span class="ruby-identifier">name</span>)
-45:     <span class="ruby-identifier">content</span>.<span class="ruby-identifier">sub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
+45:     <span class="ruby-identifier">content</span>.<span class="ruby-identifier">sub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-operator">::</span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
 46:     <span class="ruby-identifier">content</span>
 47:   <span class="ruby-keyword kw">end</span>
 </pre>
@@ -227,11 +227,11 @@ and (optional) <tt>block</tt> and returns the new content.
         </div>
       </div>
 
-      <div id="method-M000205" class="method-detail">
-        <a name="M000205"></a>
+      <div id="method-M000208" class="method-detail">
+        <a name="M000208"></a>
 
         <div class="method-heading">
-          <a href="#M000205" class="method-signature">
+          <a href="#M000208" class="method-signature">
           <span class="method-name">File.sub!(name, *args, &block) => aString or nil<br />
 </span>
           </a>
@@ -244,15 +244,15 @@ and (optional) <tt>block</tt> and replaces the file with the new content.
 Returns the result of the String#sub! call.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000205-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000205-source">
+            onclick="toggleCode('M000208-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000208-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/nuggets/file/sub_mixin.rb, line 55</span>
 55:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">sub!</span>(<span class="ruby-identifier">name</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">args</span>)
 56:     <span class="ruby-identifier">res</span> = <span class="ruby-keyword kw">nil</span>
 57: 
 58:     <span class="ruby-identifier">replace</span>(<span class="ruby-identifier">name</span>) { <span class="ruby-operator">|</span><span class="ruby-identifier">content</span><span class="ruby-operator">|</span>
-59:       <span class="ruby-identifier">res</span> = <span class="ruby-identifier">content</span>.<span class="ruby-identifier">sub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
+59:       <span class="ruby-identifier">res</span> = <span class="ruby-identifier">content</span>.<span class="ruby-identifier">sub!</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-operator">::</span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
 60:       <span class="ruby-identifier">content</span>
 61:     }
 62: 
