--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -59,6 +59,8 @@
     <a href="files/lib/nuggets/file/which_rb.html">lib/nuggets/file/which.rb</a><br />
     <a href="files/lib/nuggets/file/which_mixin_rb.html">lib/nuggets/file/which_mixin.rb</a><br />
     <a href="files/lib/nuggets/hash/at_rb.html">lib/nuggets/hash/at.rb</a><br />
+    <a href="files/lib/nuggets/hash/deep_merge_rb.html">lib/nuggets/hash/deep_merge.rb</a><br />
+    <a href="files/lib/nuggets/hash/deep_merge_mixin_rb.html">lib/nuggets/hash/deep_merge_mixin.rb</a><br />
     <a href="files/lib/nuggets/hash/in_order_rb.html">lib/nuggets/hash/in_order.rb</a><br />
     <a href="files/lib/nuggets/hash/insert_rb.html">lib/nuggets/hash/insert.rb</a><br />
     <a href="files/lib/nuggets/hash/nest_rb.html">lib/nuggets/hash/nest.rb</a><br />
