--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>Table of Contents - ruby-nuggets Application documentation (v0.8.1)</title>
+<title>Table of Contents - ruby-nuggets Application documentation (v0.8.2)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
 
 <body class="indexpage">
-<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.1)</h1>
+<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.2)</h1>
 
 <h2>Pages</h2>
 <ul>
@@ -329,11 +329,9 @@
   
     <li class="method"><a href="Util/CLI.html#method-c-execute">::execute &mdash; Util::CLI</a>
   
-    <li class="method"><a href="Nuggets/File/SubMixin.html#method-c-extended">::extended &mdash; Nuggets::File::SubMixin</a>
-  
     <li class="method"><a href="Nuggets/URI/ExistMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ExistMixin</a>
   
-    <li class="method"><a href="Util/Pluggable.html#method-c-extended">::extended &mdash; Util::Pluggable</a>
+    <li class="method"><a href="Nuggets/File/SubMixin.html#method-c-extended">::extended &mdash; Nuggets::File::SubMixin</a>
   
     <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ContentTypeMixin</a>
   
@@ -341,11 +339,11 @@
   
     <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
+    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
   
     <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
+    <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
   
     <li class="method"><a href="Process.html#method-c-interact_ruby">::interact_ruby &mdash; Process</a>
   
@@ -363,9 +361,9 @@
   
     <li class="method"><a href="IO.html#method-c-read_write">::read_write &mdash; IO</a>
   
-    <li class="method"><a href="File.html#method-c-ruby">::ruby &mdash; File</a>
-  
     <li class="method"><a href="Process.html#method-c-ruby">::ruby &mdash; Process</a>
+  
+    <li class="method"><a href="File.html#method-c-ruby">::ruby &mdash; File</a>
   
     <li class="method"><a href="Nuggets/Version.html#method-c-to_a">::to_a &mdash; Nuggets::Version</a>
   
@@ -433,9 +431,9 @@
   
     <li class="method"><a href="Nuggets/Array/MeanMixin.html#method-i-avg">#avg &mdash; Nuggets::Array::MeanMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-between">#between &mdash; Nuggets::Array::LimitMixin</a>
-  
     <li class="method"><a href="Numeric.html#method-i-between">#between &mdash; Numeric</a>
+  
+    <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-between">#between &mdash; Nuggets::Array::LimitMixin</a>
   
     <li class="method"><a href="Nuggets/Proc/BindMixin.html#method-i-bind">#bind &mdash; Nuggets::Proc::BindMixin</a>
   
@@ -569,9 +567,9 @@
   
     <li class="method"><a href="Numeric.html#method-i-hms">#hms &mdash; Numeric</a>
   
-    <li class="method"><a href="Hash.html#method-i-in_order">#in_order &mdash; Hash</a>
-  
     <li class="method"><a href="Array.html#method-i-in_order">#in_order &mdash; Array</a>
+  
+    <li class="method"><a href="Hash.html#method-i-in_order">#in_order &mdash; Hash</a>
   
     <li class="method"><a href="Array.html#method-i-in_order-21">#in_order! &mdash; Array</a>
   
@@ -589,9 +587,9 @@
   
     <li class="method"><a href="Nuggets/Integer/LengthMixin.html#method-i-length">#length &mdash; Nuggets::Integer::LengthMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-limit">#limit &mdash; Nuggets::Array::LimitMixin</a>
-  
     <li class="method"><a href="Numeric.html#method-i-limit">#limit &mdash; Numeric</a>
+  
+    <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-limit">#limit &mdash; Nuggets::Array::LimitMixin</a>
   
     <li class="method"><a href="Nuggets/String/WcMixin.html#method-i-line_count">#line_count &mdash; Nuggets::String::WcMixin</a>
   
@@ -605,9 +603,15 @@
   
     <li class="method"><a href="Util/Pluggable.html#method-i-load_gem_plugins">#load_gem_plugins &mdash; Util::Pluggable</a>
   
+    <li class="method"><a href="Util/Pluggable.html#method-i-load_path_plugins">#load_path_plugins &mdash; Util::Pluggable</a>
+  
+    <li class="method"><a href="Util/Pluggable.html#method-i-load_plugin_file">#load_plugin_file &mdash; Util::Pluggable</a>
+  
     <li class="method"><a href="Util/Pluggable.html#method-i-load_plugin_files">#load_plugin_files &mdash; Util::Pluggable</a>
   
     <li class="method"><a href="Util/Pluggable.html#method-i-load_plugins">#load_plugins &mdash; Util::Pluggable</a>
+  
+    <li class="method"><a href="Util/Pluggable.html#method-i-loaded_plugins">#loaded_plugins &mdash; Util::Pluggable</a>
   
     <li class="method"><a href="Util/Ruby.html#method-i-locate_ruby_tool">#locate_ruby_tool &mdash; Util::Ruby</a>
   
@@ -617,9 +621,9 @@
   
     <li class="method"><a href="Nuggets/Integer/MapMixin.html#method-i-map_positive">#map_positive &mdash; Nuggets::Integer::MapMixin</a>
   
-    <li class="method"><a href="Numeric.html#method-i-max">#max &mdash; Numeric</a>
-  
     <li class="method"><a href="Enumerable.html#method-i-max">#max &mdash; Enumerable</a>
+  
+    <li class="method"><a href="Numeric.html#method-i-max">#max &mdash; Numeric</a>
   
     <li class="method"><a href="Enumerable.html#method-i-max_by">#max_by &mdash; Enumerable</a>
   
@@ -635,9 +639,9 @@
   
     <li class="method"><a href="Nuggets/Object/SingletonClassMixin.html#method-i-metaobject">#metaobject &mdash; Nuggets::Object::SingletonClassMixin</a>
   
-    <li class="method"><a href="Enumerable.html#method-i-min">#min &mdash; Enumerable</a>
-  
     <li class="method"><a href="Numeric.html#method-i-min">#min &mdash; Numeric</a>
+  
+    <li class="method"><a href="Enumerable.html#method-i-min">#min &mdash; Enumerable</a>
   
     <li class="method"><a href="Enumerable.html#method-i-min_by">#min_by &mdash; Enumerable</a>
   
@@ -681,9 +685,9 @@
   
     <li class="method"><a href="Util/ContentType.html#method-i-of">#of &mdash; Util::ContentType</a>
   
-    <li class="method"><a href="Hash.html#method-i-only">#only &mdash; Hash</a>
-  
     <li class="method"><a href="Array.html#method-i-only">#only &mdash; Array</a>
+  
+    <li class="method"><a href="Hash.html#method-i-only">#only &mdash; Hash</a>
   
     <li class="method"><a href="Hash.html#method-i-only_pair">#only_pair &mdash; Hash</a>
   
@@ -694,6 +698,8 @@
     <li class="method"><a href="Util/CLI.html#method-i-opts">#opts &mdash; Util::CLI</a>
   
     <li class="method"><a href="Util/CLI.html#method-i-parse_options">#parse_options &mdash; Util::CLI</a>
+  
+    <li class="method"><a href="Util/Pluggable.html#method-i-plugin_filename">#plugin_filename &mdash; Util::Pluggable</a>
   
     <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-i-pmcc">#pmcc &mdash; Nuggets::Array::CorrelationMixin</a>
   
@@ -717,9 +723,9 @@
   
     <li class="method"><a href="Util/CLI.html#method-i-quit">#quit &mdash; Util::CLI</a>
   
-    <li class="method"><a href="Array.html#method-i-rand">#rand &mdash; Array</a>
-  
     <li class="method"><a href="Hash.html#method-i-rand">#rand &mdash; Hash</a>
+  
+    <li class="method"><a href="Array.html#method-i-rand">#rand &mdash; Array</a>
   
     <li class="method"><a href="Nuggets/File/ReplaceMixin.html#method-i-replace">#replace &mdash; Nuggets::File::ReplaceMixin</a>
   
@@ -813,15 +819,15 @@
   
     <li class="method"><a href="Net/HTTPSuccess.html#method-i-success-3F">#success? &mdash; Net::HTTPSuccess</a>
   
-    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
-  
     <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
-  
-    <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
   
     <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
   
+    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
+  
     <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
+  
+    <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
   
     <li class="method"><a href="Integer.html#method-i-to_binary_s">#to_binary_s &mdash; Integer</a>
   
@@ -859,11 +865,11 @@
   
     <li class="method"><a href="Nuggets/Env/UserHomeMixin.html#method-i-user_home">#user_home &mdash; Nuggets::Env::UserHomeMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Array::BlankMixin</a>
+    <li class="method"><a href="Nuggets/Object/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Object::BlankMixin</a>
   
     <li class="method"><a href="Nuggets/Hash/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Hash::BlankMixin</a>
   
-    <li class="method"><a href="Nuggets/Object/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Object::BlankMixin</a>
+    <li class="method"><a href="Nuggets/Array/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Array::BlankMixin</a>
   
     <li class="method"><a href="Nuggets/Array/VarianceMixin.html#method-i-var">#var &mdash; Nuggets::Array::VarianceMixin</a>
   
